--- a/JS/real clock time/clock.html
+++ b/JS/real clock time/clock.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="clock.css">
 </head>
-<body>
-    
+<body> 
+    <div class="clock">
+        <span id="time"></span>
+    </div> 
+    <script src="clock.js"></script>  
 </body>
 </html>
