--- a/Project/project3 stopwatch/index.html
+++ b/Project/project3 stopwatch/index.html
@@ -21,9 +21,9 @@
             <i class="fa-regular fa-clock"></i>
         </div>
         <div class="button">
-            <button id="start Timer">Start</button>
-            <button id="start Timer">Pause</button>
-            <button id="start Timer">Reset</button>
+            <button id="startTimer">Start</button>
+            <button id="pauseTimer">Pause</button>
+            <button id="resetTimer">Reset</button>
         </div>
     </div>
     <script src="clock.js"></script>
