--- a/Project/project5 navbar/navbar.html
+++ b/Project/project5 navbar/navbar.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <nav>
-        <div class="logo"><img src="image.png" alt="my logo" width="50" height="50"/></div>
+        <div class="mylogo"><img src="image.png" alt="my logo" width="50" height="50"/></div>
         <ul class="menu" id="menu">
             <li><a href="Home">Home</a></li>
             <li><a href="about">About</a></li>
